# lamzu-cfg

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  atlantis.md
src/: atlantis.rs  data.rs  device.rs  error.rs  lib.rs  main.rs  profile.rs
src/atlantis/: hid.rs
src/device/: atlantis.rs  checksum.rs  report.rs
src/device/atlantis/: checksum.rs  profile_rw.rs  raw_data.rs  raw_profile.rs  report.rs
