[package]
name = "lamzu"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6"
thiserror = "1.0"
keycode = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.7"
ron = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
